# DeathStarBench

./: .gitmodules
hotelReservation/services/frontend/: server.go
hotelReservation/tracing/: tracer.go
locust/: hotel-reservation-user.py  setup.sh  social-network-user.py
locust/social-network/: social-network-user.py
socialNetwork-syncmmc/: README.md  docker-compose-sharding.yml  docker-compose-swarm.yml  docker-compose-tls.yml  docker-compose.yml
socialNetwork-syncmmc/src/PostStorageService/: PostStorageHandler.h
socialNetwork-syncmmc/src/UserMentionService/: UserMentionHandler.h
socialNetwork-threadsep/: .dockerignore  Dockerfile  README.md  docker-compose-sharding.yml  docker-compose-swarm.yml  docker-compose-tls.yml  docker-compose.yml
socialNetwork-threadsep/config/: service-config.json
socialNetwork-threadsep/frontend/: main.go
socialNetwork-threadsep/src/: CustomNonBlockingServer.h  CustomNonBlockingServerSocket.h  CustomThreadFactory.h  CustomThreadManager.h
socialNetwork-threadsep/src/ComposePostService/: CMakeLists.txt  ComposePostService.cpp
socialNetwork-threadsep/src/HomeTimelineService/: CMakeLists.txt  HomeTimelineService.cpp
socialNetwork-threadsep/src/MediaService/: CMakeLists.txt  MediaService.cpp
socialNetwork-threadsep/src/PostStorageService/: CMakeLists.txt  PostStorageService.cpp
socialNetwork-threadsep/src/SocialGraphService/: CMakeLists.txt  SocialGraphService.cpp
socialNetwork-threadsep/src/TextService/: CMakeLists.txt  TextService.cpp
socialNetwork/frontend/: Dockerfile  go.mod  go.sum  main.go
(+11 files in other folders)
